--- a/OMSI2 Tools/OMSI2 Tools.csproj
+++ b/OMSI2 Tools/OMSI2 Tools.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DESTRY.IO">
+      <HintPath>..\..\DESTRY.IO\DESTRY.IO\bin\Debug\netstandard2.0\DESTRY.IO.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,6 +55,12 @@
     <Compile Include="Forms\HofActionChoose.Designer.cs">
       <DependentUpon>HofActionChoose.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Installing hof.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Installing hof.Designer.cs">
+      <DependentUpon>Installing hof.cs</DependentUpon>
+    </Compile>
     <Compile Include="OMSI.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +71,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Forms\HofActionChoose.resx">
       <DependentUpon>HofActionChoose.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Installing hof.resx">
+      <DependentUpon>Installing hof.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="OMSI.resx">
       <DependentUpon>OMSI.cs</DependentUpon>
@@ -106,6 +118,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Uninstall.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Uncheck All.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Check All.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Delete Hof.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Add Hof.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Update.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Uncheck All Mouse Hover.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
